--- a/eda_notebook.ipynb
+++ b/eda_notebook.ipynb
@@ -27,26 +27,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "c06bac64",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'kangaroo': {'singular': ['le kangourou', 'il canguro'], 'plural': ['les kangourou', 'i canguri']}, 'shark': {'singular': ['le requin', 'lo squalo'], 'plural': ['les requins', 'gli squali']}, 'giraffe': {'singular': ['la girafe', 'la giraffa'], 'plural': ['les girafes', 'le giraffe']}}\n"
+     "data": {
+      "text/plain": [
+       "['le kangourou', 'il canguro']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config['kangaroo']['singular']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4f5c54ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hello' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mhello\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'hello' is not defined"
      ]
     }
    ],
    "source": [
-    "print(config)"
+    "hello\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3858ef2",
+   "id": "124d6205",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.17)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -68,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
