--- a/eda_notebook.ipynb
+++ b/eda_notebook.ipynb
@@ -48,28 +48,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4f5c54ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hello' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mhello\u001b[49m\n",
-      "\u001b[31mNameError\u001b[39m: name 'hello' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "hello\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "124d6205",
    "metadata": {},
@@ -79,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.12.10)",
    "language": "python",
    "name": "python3"
   },
