--- a/eda_notebook.ipynb
+++ b/eda_notebook.ipynb
@@ -2,57 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "320edb92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml \n",
-    "from pathlib import Path\n"
+    "from src.process_yaml_functions import get_and_open_yaml_config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "013d9797",
+   "metadata": {},
+   "source": [
+    "# Animals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "09e29e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = get_and_open_yaml_config('words_for_animals')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b20e22c",
+   "metadata": {},
+   "source": [
+    "### What is the word for kangaroos?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "09e29e20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config_path = Path('configs')/'words_for_animals.yaml'\n",
-    "\n",
-    "\n",
-    "with open(config_path, 'r') as file:\n",
-    "    config = yaml.safe_load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "c06bac64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['le kangourou', 'il canguro']"
+       "['les kangourou', 'i canguri']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config['kangaroo']['singular']"
+    "config['kangaroo']['plural']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "124d6205",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
