--- a/eda_notebook.ipynb
+++ b/eda_notebook.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "from src.process_yaml_functions import get_and_open_yaml_config"
    ]
   },
@@ -25,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = get_and_open_yaml_config('words_for_animals')"
+    "animal_dict = get_and_open_yaml_config('words_for_animals')"
    ]
   },
   {
@@ -54,13 +55,51 @@
     }
    ],
    "source": [
-    "config['kangaroo']['plural']"
+    "animal_dict['kangaroo']['plural']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39d77cc9",
+   "metadata": {},
+   "source": [
+    "## Objects\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3133635d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kitchen_objects_dict = get_and_open_yaml_config('words_for_objects')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98989e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please put the ['la forchette', 'la forchetta'] in the [\"l'évier\", 'il lavandino'].\n"
+     ]
+    }
+   ],
+   "source": [
+    "# logging.info(f\"Please put the {kitchen_objects_dict['kitchen']['fork']} in the {kitchen_objects_dict['kitchen']['sink']}.\")\n",
+    "\n",
+    "print(f\"Please put the {kitchen_objects_dict['kitchen']['fork']} in the {kitchen_objects_dict['kitchen']['sink']}.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.10)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
